# llama-vulkan

./: CMakeLists.txt  README.md  generate_exports_def.py
src/: exports.def  llama-vulkan.cpp  test_main.cpp
